# nam-player-tools

./: .gitignore  FORMAT_SPEC.md  LICENSE  README.md  dimehead_bank.py  nam_config_tool.py  namplayer-factory-defaults.npb  pyproject.toml
dimehead_gui/: global_panel.py  main.py  preset_edit_dialog.py
spec/: functional-spec.md  pyside6-spec.md
